--- a/src/pages/register/index.html
+++ b/src/pages/register/index.html
@@ -4,52 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="../../styles/buttons.css">
-    <link rel="stylesheet" href="../../styles/displays.css">
     <link rel="stylesheet" href="../../styles/inputs.css">
     <link rel="stylesheet" href="../../styles/modal.css">
+    <link rel="stylesheet" href="../../styles/displays.css">
     <link rel="stylesheet" href="../../styles/globalStyles.css">
     <link rel="stylesheet" href="./index.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
     <title>Pet Info - Register</title>
 </head>
 <body>
-    <main class="main">
+    <main class="main  flex_row_reverse align_center justify_center container">
         <section class="section-1">
-            <div class="section-1_div-1">
+            <div class="section-1_div-1 flex_column">
                 <h1 class="main_title">Petinfo</h1>
                 <p class="section-1_paragraph-1">Ooooooba!</p>
-                <p class="section-1_paragraph-2">Agora vamos poder contribuir para o bem estar do seu pet por meio do conhecimento</p>
+                <div class="section-1_div-1">
+                    <p class="section-1_paragraph-2">Agora vamos poder contribuir para o bem estar do seu pet por meio do conhecimento</p>
+                </div>
                 <div class="section-1_div-2">
-                    <img class="img" src="./assets/img/Rectangle 2 (1).svg" alt="">
-                    <img class="img" src="./assets/img/Rectangle 3 (1).svg" alt="">
-                    <img class="img" src="./assets/img/Rectangle 4 (1).svg" alt="">
-                    <img class="img" src="./assets/img/Rectangle 5 (1).svg" alt="">
+                    <img class="section-1_img-1" src="./assets/img/Rectangle 2 (1).svg" alt="">
+                    <img class="section-1_img-2" src="./assets/img/Rectangle 3 (1).svg" alt="">
+                    <img class="section-1_img-3" src="./assets/img/Rectangle 4 (1).svg" alt="">
+                    <img class="section-1_img-4" src="./assets/img/Rectangle 5 (1).svg" alt="">
                 </div>
             </div>
         </section>
         <section class="section-2">
-            <div class="section-2_div-1">
-                <div class="section-2_div-2">
+            <div class="section-2_div-1 flex_column">
+                <div class="section-2_div-2 flex_row justify_between">
                     <h3 class="section-2_title">Cadastro</h3>
-                    <button class="section-2_div-2_btn">Voltar para o login</button>
+                    <button class="button page_change-btn section-2_div-2_btn">Voltar para o login</button>
                 </div> 
-                <form class="register_form">
-                    <label for="inputUser">Usuário</label>
-                    <input class="section-2_form_user" type="text" name="inputUser" placeholder="Digite seu usuário aqui...">
+                <form class="register_form flex_column">
+                    <label class="label_form" for="inputUser">Usuário</label>
+                    <input class="input section-2_form_user" type="text" name="inputUser" placeholder="Digite seu usuário aqui...">
 
-                    <label for="inputEmail">Email</label>
-                    <input class="section-2_form_email" type="text" name="inputEmail" placeholder="Digite seu email aqui...">
+                    <label class="label_form" for="inputEmail">Email</label>
+                    <input class="input section-2_form_email" type="text" name="inputEmail" placeholder="Digite seu email aqui...">
     
-                    <label for="inputUrl">Link da foto do perfil</label>
-                    <input class="section-2_form_photo" type="url" name="inputUrl" placeholder="Insira o link aqui...">
+                    <label class="label_form" for="inputUrl">Link da foto do perfil</label>
+                    <input class="input section-2_form_photo" type="url" name="inputUrl" placeholder="Insira o link aqui...">
 
-                    <label for="inputPassword">Senha</label>
-                    <input class="section-2_form_password" type="password" name="inputPassword" placeholder="Digite sua senha aqui...">
+                    <label class="label_form" for="inputPassword">Senha</label>
+                    <input class="input section-2_form_password" type="password" name="inputPassword" placeholder="Digite sua senha aqui...">
               
 
-                    <button class="section-2_form_btn" type="submit">Cadastrar</button>
+                    <button class="button login_register-btn section-2_form_btn" type="submit">Cadastrar</button>
                 </form>
-                <button class="section-2_btn">Voltar para o login</button>
+                <button class="button page_change-btn section-2_btn">Voltar para o login</button>
             </div>
         </section>
     </main>
