--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -22,6 +22,11 @@
         <div class="header_div flex_row">
             <button class="header_btn button create_post-btn">Criar publicação</button>
             <img class="header_img" src="./Assets/img/Ellipse 2.svg" alt="">
+            <div class="exit_modal hidden">
+                <span class="user">@samuelleaoui</span>
+                <img class="img_exit" src="./Assets/img/sign-out-alt.svg" alt="">
+                <button class="btn_exit">Sair da conta</button>
+            </div>
         </div>
     </header>
     <div class="feed_container">
