JS login and register done

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./src/styles/modal.css">
     <link rel="stylesheet" href="./src/styles/displays.css">
     <link rel="stylesheet" href="./src/styles/toast.css">
+    <link rel="stylesheet" href="./src/styles/spinner.css">
     <link rel="stylesheet" href="./src/styles/globalStyles.css">
     <link rel="stylesheet" href="./src/pages/login/index.css">
 
@@ -47,11 +48,11 @@
                     <input class="input section-2_form_password" type="password" name="inputPassword" id="password" placeholder="Digite sua senha aqui...">
                     <span class="password_error hidden">Email ou senha incorreto(a)</span>
 
-                    <button id="btnLogin" type="submit" class="button login_register-btn btn_form_login btn_login_disabled">Acessar</button>
+                    <button disabled="true" id="btnLogin" type="submit" class="button login_register-btn btn_form_login btn_login_disabled">Acessar</button>
                 </form>
                 <div class="section-2_div-2">
                     <span class="section-2_div-2_span">Ainda não possui conta?</span>
-                    <p class="section-2_div-2_paragraph">Clicando no botão abaixo, você pode se cadastrar rapidamente.</p>      
+                    <p class="section-2_div-2_paragraph">Clicando no botão abaixo você pode se cadastrar rapidamente.</p>      
                 </div>       
             </div>   
             <button id="changePageBtn" class="button page_change-btn btn_register">Cadastrar</button>     
