--- a/src/pages/register/index.html
+++ b/src/pages/register/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../../styles/modal.css">
     <link rel="stylesheet" href="../../styles/displays.css">
     <link rel="stylesheet" href="../../styles/toast.css">
+    <link rel="stylesheet" href="../../styles/spinner.css">
     <link rel="stylesheet" href="../../styles/globalStyles.css">
     <link rel="stylesheet" href="./index.css">
 
@@ -23,7 +24,7 @@
         <section class="section-1">
             <div class="section-1_div-1 flex_column">
                 <h1 class="main_title">Petinfo</h1>
-                <p class="section-1_paragraph-1">Ooooooba!</p>
+                <p class="section-1_paragraph-1">Obaaaaaaa!</p>
                 <div class="section-1_div-1">
                     <p class="section-1_paragraph-2">Agora vamos poder contribuir para o bem estar do seu pet por meio do conhecimento</p>
                 </div>
@@ -55,7 +56,7 @@
                     <input class="input section-2_form_password" type="password" name="inputPassword" id="password" placeholder="Digite sua senha aqui...">
               
 
-                    <button class="button login_register-btn section-2_form_btn" type="submit">Cadastrar</button>
+                    <button id="btnRegister" disabled="true" class="button login_register-btn section-2_form_btn btn_login_disabled" type="submit">Cadastrar</button>
                 </form>
                 <button id="changePageTwo" class="button page_change-btn section-2_btn">Voltar para o login</button>
             </div>
