--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="../../styles/displays.css">
     <link rel="stylesheet" href="../../styles/inputs.css">
     <link rel="stylesheet" href="../../styles/modal.css">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="../../styles/spinner.css">
+    <link rel="stylesheet" href="../../styles/toast.css">
     <link rel="stylesheet" href="../../styles/globalStyles.css">
+    <link rel="stylesheet" href="./index.css">
+    
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
