Debug register inputs

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section class="section-2">
             <div class="section-2_div-1 flex_column">
                 <h3 class="section-2_title">Login</h3>
-                <form id="formLogin" class="flex_column login_form">
+                <form id="testId" class="flex_column login_form">
                     <label class="label_form" for="inputText">Email</label>
                     <input class="input section-2_form_email" id="email" type="email" name="inputText" placeholder="Digite seu email aqui...">
 
