--- a/src/pages/register/index.html
+++ b/src/pages/register/index.html
@@ -42,7 +42,7 @@
                     <h3 class="section-2_title">Cadastro</h3>
                     <button id="changePageOne" class="button page_change-btn section-2_div-2_btn">Voltar para o login</button>
                 </div> 
-                <form id="registerForm" class="register_form flex_column">
+                <form id="registerTesting" class="register_form flex_column">
                     <label class="label_form" for="inputUser">Usuário</label>
                     <input class="input section-2_form_user" type="text" name="inputUser" id="username" placeholder="Digite seu usuário aqui...">
 
